--- a/Styles/Styles.css
+++ b/Styles/Styles.css
@@ -5,7 +5,7 @@
    .parent 
    {
 
-    background: #0066CC; 
+    background: #000000;
     padding: 10px;
     
    } 
@@ -26,7 +26,7 @@
  background-color: #f5f5f5;
  margin: 0 5px 0 0;
  border-radius:5px;
-  
+
 display:inline-block;
  padding: 8px 18px;            
 
@@ -38,11 +38,10 @@ display:inline-block;
  text-decoration: none;
 }
 
-img {display:block;
-     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: -75px;
-    margin-left: -75px;}
+img 
+{
+    display: inline-block;
+     margin:10% 2% 0 0;
+     }
     
     
